WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140814
[GTK] Fix debug build after
r178940
https://bugs.webkit.org/show_bug.cgi?id=140814
Summary
[GTK] Fix debug build after r178940
Hunseop Jeong
Reported
2015-01-22 21:45:02 PST
../../Source/WebCore/platform/graphics/opentype/OpenTypeVerticalData.cpp: In member function ‘void WebCore::OpenTypeVerticalData::substituteWithVerticalGlyphs(const WebCore::Font*, WebCore::GlyphPage*, unsigned int, unsigned int) const’: ../../Source/WebCore/platform/graphics/opentype/OpenTypeVerticalData.cpp:547:52: error: ‘struct WebCore::GlyphData’ has no member named ‘fontData’ ASSERT(glyphPage->glyphDataForIndex(index).fontData == font);
Attachments
Patch
(1.60 KB, patch)
2015-01-22 22:07 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2015-01-22 22:07:17 PST
Created
attachment 245208
[details]
Patch
Carlos Garcia Campos
Comment 2
2015-01-22 23:35:52 PST
Comment on
attachment 245208
[details]
Patch Thanks!
WebKit Commit Bot
Comment 3
2015-01-23 00:19:48 PST
Comment on
attachment 245208
[details]
Patch Clearing flags on attachment: 245208 Committed
r178986
: <
http://trac.webkit.org/changeset/178986
>
WebKit Commit Bot
Comment 4
2015-01-23 00:19:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug