[GTK] Fix debug build after r178940 https://bugs.webkit.org/show_bug.cgi?id=140814

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-01-23
Reviewed by Carlos Garcia Campos.

* platform/graphics/opentype/OpenTypeVerticalData.cpp:
(WebCore::OpenTypeVerticalData::substituteWithVerticalGlyphs):

Canonical link: https://commits.webkit.org/158800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178986 268f45cc-cd09-0410-ab3c-d52691b4dbfc